--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,3 +13,52 @@ $primary-hue: 335;
 :root {
   --primary: #43a047;
 }
+
+@font-face {
+  font-family: "slkscre";
+  src: url("fonts/slkscre.ttf") format('truetype');
+}
+
+@font-face {
+  font-family: "Pixelmania";
+  src: url("fonts/Pixelmania.ttf") format('truetype');
+}
+
+@font-face {
+  font-family: "Publicpixel";
+  src: url("fonts/PublicPixel.ttf") format('truetype');
+}
+
+
+
+.button {
+  background-color: var(--primary);
+  color : var(--primary-inverse);
+  border: 0.1em solid var(--primary-inverse);
+  box-shadow: 1px 1px 0px 2px var(--secondary);
+
+  display: block;
+  padding : 1em;
+  margin: .5em;
+
+  font-family: "Publicpixel", courier, monospace;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.button:is([aria-current], :hover, :active, :focus),
+input[type=submit]:is([aria-current], :hover, :active, :focus),
+input[type=button]:is([aria-current], :hover, :active, :focus),
+input[type=reset]:is([aria-current], :hover, :active, :focus),
+[role=button]:is([aria-current], :hover, :active, :focus) {
+  background-color: var(--primary-hover);
+}
+.button:focus,
+input[type=submit]:focus,
+input[type=button]:focus,
+input[type=reset]:focus,
+[role=button]:focus {
+  box-shadow: 1px 1px 0px 2px var(--primary);
+  border: 0.3em solid var(--primary-inverse);
+  padding : 0.8em;
+}
