--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,6 +29,7 @@ $primary-hue: 335;
   --neutral:#a3a3a3;
   --neutral-light:#e9e9e9;
   --neutral-dark:#525252;
+  --neutral-text: #000;
 
   // Typography
   font-family: "Publicpixel", courier, monospace;
@@ -41,6 +42,18 @@ $primary-hue: 335;
   --block-spacing-vertical: calc(var(--spacing) * 2);
   --form-element-spacing-vertical: 0.75rem;
   --form-element-spacing-horizontal: 1rem;
+}
+
+[data-theme=dark] {
+  --background-color:#222;
+  --neutral-text: #b4b4b4;
+  --neutral-light: #303030;
+  --secondary: #2b6e5e;
+}
+
+body {
+  color: var(--neutral-text);
+  background-color: var(--background-color);
 }
 
 /**
@@ -61,7 +74,8 @@ $primary-hue: 335;
  * Form elements
  *
  */
-input[type=search] {
+
+input {
   font-family: "Publicpixel", courier, monospace;
   padding-inline-start: calc(var(--form-element-spacing-horizontal) + 1.75rem);
   border: 6px solid var(--primary);
