--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,7 +12,7 @@ $primary-hue: 335;
 
 @font-face {
   font-family: "Publicpixel";
-  src: url("fonts/PublicPixel.ttf") format('truetype');
+  src: url("/fonts/PublicPixel.ttf") format('truetype');
 }
 
 
