Improve selector style

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -68,6 +68,12 @@ body {
 .grid {
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
 }
 
 /**
